--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,20 @@ h1 {
   stroke: steelblue;
   stroke-width: 3px;
 }
+
+div.tooltip {
+  position: absolute;
+  text-align: center;
+  width: 60px;
+  height: 28px;
+  padding: 2px;
+  font: 12px sans-serif;
+  background: yellow;
+  border: 0px;
+  border-radius: 8px;
+}
+
+.area {
+  fill: url(#area-gradient);
+  stroke-width: 0px;
+}
