--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,21 @@
 body {
   width: 960px;
   height: 850px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  margin-bottom: 20px;
+  background: linear-gradient(to bottom right, #ffffff 0%, #ccffcc 100%);
 }
 
 h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 900;
     font-size: 32px;
-    margin-bottom: 20px;
+    margin-top: 50px;
+    margin-left: 100px;
+    margin-right: 20px;
+    margin-bottom: 50px;
 }
 
 .line {
